Add MCP Client example

--- a/examples/mcp/wrangler.jsonc
+++ b/examples/mcp/wrangler.jsonc
@@ -2,6 +2,7 @@
   "name": "mcp-agent-demo",
   "main": "src/server.ts",
   "compatibility_date": "2025-03-14",
+  "compatibility_flags": ["nodejs_compat"],
   "durable_objects": {
     "bindings": [
       {
