--- a/examples/mcp-client/package.json
+++ b/examples/mcp-client/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "concurrently \"vite dev\" \"wrangler dev\" --kill-others"
+    "start": "vite dev --port 8787"
   },
   "keywords": [],
   "author": "",
