Add MCP client with authentication and example

--- a/examples/mcp-client/wrangler.jsonc
+++ b/examples/mcp-client/wrangler.jsonc
@@ -14,6 +14,12 @@
       },
     ],
   },
+  "kv_namespaces": [
+    {
+      "binding": "CLIENT_OAUTH_NAMESPACE",
+      "id": "TODO"
+    }
+  ],
   "migrations": [
     {
       "tag": "v1",
