--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
   "overrides": {
     "esbuild": "^0.25.1"
   },
-  "packageManager": "npm@11.2.0"
+  "packageManager": "npm@11.2.0",
+  "dependencies": {
+    "mcp-remote": "^0.0.10"
+  }
 }
