--- a/examples/mcp-client/package.json
+++ b/examples/mcp-client/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "vite dev"
+    "start": "vite dev",
+    "deploy": "vite build && wrangler deploy"
   },
   "keywords": [],
   "author": "",
