Minor fixes to environment, styling

--- a/examples/mcp-client/package.json
+++ b/examples/mcp-client/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "start": "vite dev",
-    "deploy": "vite build && wrangler deploy"
+    "build": "vite build",
+    "deploy": "wrangler deploy"
   },
   "keywords": [],
   "author": "",
