--- a/examples/mcp-client/wrangler.jsonc
+++ b/examples/mcp-client/wrangler.jsonc
@@ -7,7 +7,7 @@
     "directory": "dist/client",
   },
   "vars": {
-    "ENV": "production",
+    "HOST": "<DEPLOYED_HOSTNAME>",
   },
   "durable_objects": {
     "bindings": [
