--- a/packages/agents/package.json
+++ b/packages/agents/package.json
@@ -52,6 +52,11 @@
       "types": "./dist/mcp/client.d.ts",
       "require": "./dist/mcp/client.js",
       "import": "./dist/mcp/client.js"
+    },
+    "./mcp/do-oauth-client-provider": {
+      "types": "./dist/mcp/do-oauth-client-provider.d.ts",
+      "require": "./dist/mcp/do-oauth-client-provider.js",
+      "import": "./dist/mcp/do-oauth-client-provider.js"
     }
   },
   "keywords": [],
@@ -72,8 +77,5 @@
     "nanoid": "^5.1.5",
     "partyserver": "^0.0.66",
     "partysocket": "1.1.3"
-  },
-  "devDependencies": {
-    "@modelcontextprotocol/sdk": "^1.8.0"
   }
 }
